Fix Mac Clipping
Fixes text clipping on Mac for #flipOrientationButton, fix supplied by @manongjohn.

--- a/stuff/config/qss/Astral_072_Dark/less/layouts/xsheet.less
+++ b/stuff/config/qss/Astral_072_Dark/less/layouts/xsheet.less
@@ -208,3 +208,9 @@ SpreadsheetViewer {
     background-repeat: no-repeat;
   }
 }
+
+// This fixes a Mac specific issue with text clipping
+// This may be temporary
+#flipOrientationButton {
+  padding: 2px 12px;
+}
